[gd_scene load_steps=15 format=3 uid="uid://b50wns0oep88w"]

[ext_resource type="Script" path="res://Scripts/golden_knight.gd" id="1_h14s4"]
[ext_resource type="Texture2D" uid="uid://bjeghg8gb06c0" path="res://Sprites/Light.png" id="2_24c6w"]
[ext_resource type="Texture2D" uid="uid://q8lk5x6hqbgf" path="res://Sprites/aeQmEd.png" id="2_t8gp1"]
[ext_resource type="Texture2D" uid="uid://g0l75fq6raog" path="res://Sprites/HatsTest.png" id="4_2w2yg"]
[ext_resource type="Script" path="res://Scripts/AnimationPlayer.gd" id="4_a2ciw"]
[ext_resource type="Script" path="res://Scripts/LifeGoldenKnight.gd" id="4_lfjmj"]
[ext_resource type="Texture2D" uid="uid://dqtveq4llwknv" path="res://Sprites/0x72_DungeonTilesetII_v1.4.png" id="5_sa036"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpmbe"]
size = Vector2(19, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqqyq"]
size = Vector2(21, 28)

[sub_resource type="CircleShape2D" id="CircleShape2D_eh4k5"]
radius = 172.003

[sub_resource type="Animation" id="Animation_e14jl"]
resource_name = "Idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_nnhpy"]
length = 0.35
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [136, 137, 138, 139]
}

[sub_resource type="Animation" id="Animation_1dg1r"]
resource_name = "Walking"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [59, 60, 61, 63]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ian5"]
_data = {
"Idle": SubResource("Animation_e14jl"),
"RESET": SubResource("Animation_nnhpy"),
"Walking": SubResource("Animation_1dg1r")
}

[node name="Golden Knight" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 275
script = ExtResource("1_h14s4")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, 16)
scale = Vector2(0.033, 0.00900001)
texture = ExtResource("2_24c6w")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_t8gp1")
hframes = 8
vframes = 12
frame = 56

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_dpmbe")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 268

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_gqqyq")

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(0.5, 0.5)
color = Color(0.407843, 0, 0.407843, 1)
energy = 0.5
texture = ExtResource("2_24c6w")

[node name="ActivationBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationBox"]
shape = SubResource("CircleShape2D_eh4k5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_2ian5")
}
script = ExtResource("4_a2ciw")

[node name="Timer" type="Timer" parent="AnimationPlayer"]
wait_time = 8.0
one_shot = true

[node name="Attack" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Hat" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -16)
texture = ExtResource("4_2w2yg")
hframes = 15

[node name="Life" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_lfjmj")

[node name="Heart1" type="Sprite2D" parent="Life"]
position = Vector2(-2, -19)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_sa036")
hframes = 32
vframes = 32
frame = 530

[node name="Heart2" type="Sprite2D" parent="Life"]
position = Vector2(5, -19)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_sa036")
hframes = 32
vframes = 32
frame = 530

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(1, 200)
spread = 166.68
initial_velocity_min = 58.59
initial_velocity_max = 68.69
scale_amount_min = 2.0
scale_amount_max = 3.0
color = Color(0.917647, 1, 0, 1)

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="ActivationBox" to="." method="_on_activation_box_area_entered"]
[connection signal="timeout" from="Attack" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
